--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -54,11 +55,15 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - lib/features/gymPreview/data.json
+    - lib/assets/gymPreview/image1_app.jpg
+    - lib/assets/gymPreview/image2_app.jfif
+    - lib/assets/gymPreview/image3_app.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
