--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  shared_preferences: ^2.5.3
   shadcn_flutter: ^0.0.44
   flutter_local_notifications: ^19.5.0
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
