--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,19 @@
 .swiftpm/
 migrate_working_dir/
 
+# Env
+.env
+
 # IntelliJ related
 *.iml
 *.ipr
 *.iws
 .idea/
+
+# Build artifacts
+linux/
+macos/
+windows/
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
