--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   dio: ^5.5.0
   flutter_dotenv: ^5.1.0
   flutter_secure_storage: ^8.0.0
+  intl: ^0.20.2
   
 dev_dependencies:
   flutter_test:
