--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   intl: ^0.20.2
   qr_flutter: ^4.1.0
   webview_flutter: ^4.10.0
+  image_picker: ^1.2.1
   
 dev_dependencies:
   flutter_test:
