--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   intl: ^0.20.2
   qr_flutter: ^4.1.0
   webview_flutter: ^4.10.0
+  webview_flutter_android: ^4.10.11
+  webview_flutter_wkwebview: ^3.23.5
   image_picker: ^1.2.1
   
 dev_dependencies:
