--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - lib/assets/gymPreview/ugetUget.jpg
     - lib/assets/gymPreview/ugetUget1.jpg
     - lib/assets/gymPreview/ugetUget2.jpg
+    - lib/assets/image/gym_screen.png
 
 
   # To add assets to your application, add an assets section, like this:
