--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
   assets:
     - .env
     - lib/assets/video_panduan/
+    - lib/assets/image/
 
 
   # To add assets to your application, add an assets section, like this:
