Fix Switch YouTube video playback to youtube_player_flutter
Replaced the WebView-based YouTube video playback with youtube_player_flutter for a more native experience. Updated DetailAlatGymViewModel to use YoutubePlayerController and refactored related logic. Updated dependencies in pubspec.yaml to include youtube_player_flutter.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shadcn_flutter: ^0.0.44
   flutter_local_notifications: ^19.5.0
   http: ^1.6.0
+  youtube_player_flutter: ^9.0.0
   video_player: ^2.8.2
   chewie: ^1.7.1
   
